# VMirror-SiM

./: .gitignore  CHANGELOG.md  README.md  environment.yml  fix_and_push.sh  pyproject.toml  setup_git.sh  开发进度.md
assets/blender-camera/: driver_camera.blend
assets/blender-mirror/: clip_on_blind_spot.blend  electric_main.blend  electric_main_L.blend  electric_main_R.blend  electric_sub.blend  standard_convex.blend  standard_convex_L.blend  standard_convex_R.blend  standard_flat.blend  towing_main.blend  towing_main_L.blend  towing_main_R.blend  towing_wide_angle.blend
assets/blender-scenes/: scene_highway.blend  scene_lane_change.blend  scene_parking.blend  scene_regulatory.blend
config/: caravans.yaml  mirrors.yaml  scenarios.yaml  test_scene.yaml  vehicles.yaml
configs/cameras/: driver_camera_L.yaml  driver_camera_R.yaml  driver_camera_wide_L.yaml  driver_camera_wide_R.yaml
configs/caravans/: compact.yaml  large.yaml  large2.yaml  middle.yaml
configs/mirrors/: clip_on_blind_spot_L.yaml  clip_on_blind_spot_R.yaml  electric_main_L.yaml  electric_main_R.yaml  electric_sub_L.yaml  electric_sub_R.yaml  standard_convex_L.yaml  standard_convex_R.yaml  towing_main_L.yaml  towing_main_R.yaml  (+2 more)
docs/: CaravanModels.md  CoordinateCalculation.md  MirrorDesign.md  ProjectOverview.md  PromptLog.md  TestScene.md  VehicleModels.md  coordinates.md  model_import.md  pipeline.md
notebooks/: vmirror_explorer.ipynb
src/: __init__.py  _common.py  camera_rig.py  config_exporter.py  mirror_builder.py  pipeline.py  renderer.py  scene_builder.py  simulation_builder.py
(+21 files in other folders)
