[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirror_sim"            # 包名，改成你的项目名
version = "0.1.0"                # 初始版本号
description = "拖车后视镜视野仿真系统 — Vehicle Mirror Simulation for towing scenarios"
readme = "README.md"             # 可选：项目自述文件
authors = [
  { name = "Weixian Fu", email = "weixian.fu@outlook.com" }
]
license = { file = "LICENSE" }      
keywords = ["bpy", "blender", "mirror", "towing", "caravan", "vision", "simulation"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy>=1.24",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",     # 测试框架
  "flake8>=6.0",     # 代码风格检查
  "mypy>=1.0"        # 类型检查
]

[tool.setuptools.packages.find]
where = ["src"]      # 源码目录，可改为项目根目录
exclude = ["tests*"]
